--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
+  <head>
+    <title>Welcome & Cheers!◦°˚\(*❛‿❛)/˚°◦</title>
+  <head>
   <body>
-    
     Hello there, awesome person!
-    
   </body>
 </html>
