--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Welcome & Cheers!◦°˚\(*❛‿❛)/˚°◦</title>
   </head>
+  <h1>home</h1>
   <body>
     Hello there, awesome person!
   </body>
