--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>Welcome & Cheers!◦°˚\(*❛‿❛)/˚°◦</title>
   </head>
+  <h1>Home</h1>
   <body>
-    Hello there, awesome person!
+    Hello there!
   </body>
 </html>
