--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <title>Welcome & Cheers!◦°˚\(*❛‿❛)/˚°◦</title>
+    <h1>Home</h1>
   </head>
+ 
   <body>
     Hello there, awesome person!
   </body>
