--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title>Welcome & Cheers!◦°˚\(*❛‿❛)/˚°◦</title>
-    <h1>Home</h1>
+    <title>Cheers!◦°˚\(*❛‿❛)/˚°◦</title> 
   </head>
+  <h1>Home</h1>
+  <img src="https://avatars0.githubusercontent.com/u/32725336?s=400&u=f1b1534ef13787600e3360ecab4a197ff7893f93&v=4">
  
   <body>
-    Hello there, awesome person!
+    Hello there!
   </body>
 </html>
