adding list and links
adding list and links

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <title>Cheers!◦°˚\(*❛‿❛)/˚°◦</title> 
   </head>
   <h1>Home</h1>
-  <img src="https://avatars0.githubusercontent.com/u/32725336?s=400&u=f1b1534ef13787600e3360ecab4a197ff7893f93&v=4">
- 
+  <img src="https://www.rtlnieuws.nl/sites/default/files/styles/landscape_2/public/content/images/2016/06/10/iStock_79851943_MEDIUM.jpg?itok=dOFiFdXF">
+  <ol>
+    <li>www.novipnoad.com</li>
+    <li>www.bilibili.com</li>
+  </ol>
   <body>
     Hello there!
   </body>
