--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <h1>Home</h1>
   <img src="https://www.rtlnieuws.nl/sites/default/files/styles/landscape_2/public/content/images/2016/06/10/iStock_79851943_MEDIUM.jpg?itok=dOFiFdXF">
   <ol>
-    <li>www.novipnoad.com</li>
-    <li>www.bilibili.com</li>
+    <li>Novipnoad</li>
+    <li>Bilibili</li>
   </ol>
+  <a href="https://www.novipnoad.com">This is a link to novipnoad!</a>
+  <a href="https://www.bilibili.com">This is a link to Bilibili!</a>
   <body>
     Hello there!
   </body>
