adding css style
adding css style

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Cheers!◦°˚\(*❛‿❛)/˚°◦</title> 
+    <link rel="stylesheet" href="style.css">
   </head>
   <h1>Home</h1>
   <img src="https://www.rtlnieuws.nl/sites/default/files/styles/landscape_2/public/content/images/2016/06/10/iStock_79851943_MEDIUM.jpg?itok=dOFiFdXF">
