--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <h1>Home</h1>
   <img src="https://www.rtlnieuws.nl/sites/default/files/styles/landscape_2/public/content/images/2016/06/10/iStock_79851943_MEDIUM.jpg?itok=dOFiFdXF">
   <ol>
-    <li>Novipnoad</li>
-    <li>Bilibili</li>
+    <li>Below are the two website I visit most for dramas, animes and more!</ol>
+    <li>Novipnoad</li> <a href="https://www.novipnoad.com">This is a link to novipnoad!</a>
+    <li>Bilibili</li> <a href="https://www.bilibili.com">This is a link to Bilibili!</a>
   </ol>
-  <a href="https://www.novipnoad.com">This is a link to novipnoad!</a>
-  <a href="https://www.bilibili.com">This is a link to Bilibili!</a>
+  
+  
   <body>
-    Hello there!
+    Welcome and cheers!
   </body>
 </html>
